Closed Bug 1237617 Opened 10 years ago Closed 9 years ago

Window white/empty on launch/start if User Account Control (UAC) panel open, parts visible if mouse mover over them (hover)

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla49
Tracking Status
firefox49 --- verified

People

(Reporter: aryx, Assigned: sotaro)

References

(Blocks 1 open bug)

Details

(Whiteboard: [gfx-noted])

Attachments

(2 files)

Attached image screenshot of issue
Firefox 43 - Nightly 46.0a1 on Windows 8.1 64 bit If Firefox gets launched and opens its first window while the screen is blocked by a User Account Control prompt to modify the computer, the window will be empty and only reveal elements if one moves the mouse over them (after one has canceled or confirmed the prompt). Steps to reproduce: 1. Schedule a Firefox launch (e.g. with Task scheduling or copy a profile and launch Firefox with that from a script or just slow startup on a HDD might be enough). 2. Trigger a UAC to confirm a modification to the computer (e.g. turning anti-virus off; haven't tested with dialog for execution of file from remote source). 3. Wait some seconds until Firefox should have launched. 4. Cancel prompt. Intel HD Graphics 10.18.14.4332, Nvidia 361.43 Graphics -------- Adapter Description: Intel(R) HD Graphics 4600 Adapter Description (GPU #2): NVIDIA GeForce GTX 765M Adapter Drivers: igdumdim64 igd10iumd64 igd10iumd64 igdumdim32 igd10iumd32 igd10iumd32 Adapter Drivers (GPU #2): nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um Adapter RAM: Unknown Adapter RAM (GPU #2): 2048 Asynchronous Pan/Zoom: none Device ID: 0x0416 Device ID (GPU #2): 0x11e2 Direct2D Enabled: true DirectWrite Enabled: true (6.3.9600.18123) Driver Date: 11-20-2015 Driver Date (GPU #2): 12-16-2015 Driver Version: 10.18.14.4332 Driver Version (GPU #2): 10.18.13.6143 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC) Subsys ID: 35371558 Subsys ID (GPU #2): 35371558 Supports Hardware H264 Decoding: Yes Vendor ID: 0x8086 Vendor ID (GPU #2): 0x10de WebGL Renderer: Google Inc. -- ANGLE (Intel(R) HD Graphics 4600 Direct3D11 vs_5_0 ps_5_0) windowLayerManagerRemote: true AzureCanvasBackend: direct2d 1.1 AzureContentBackend: direct2d 1.1 AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0
I confirmed the problem.
Assignee: nobody → sotaro.ikeda.g
Whiteboard: [gfx-noted]
When BasciCompositor is used, the problem does not happen. From it, rendering result is not stored in platform side when the problem happened.
Blocks: 1242622
After UAC close, when the Firefox became foreground, nsWindow received only the following WM_ events. > WM_NCACTIVATE > WM_WINDOWPOSCHANGING > WM_WINDOWPOSCHANGED
To delay firefox start, I used "timeout 10 && ./mach run".
Comment on attachment 8742704 [details] [diff] [review] patch - Call nsWindow::ForcePresent during going active :jrmuizel, can you review the patch?
Attachment #8742704 - Flags: review?(jmuizelaar)
Comment on attachment 8742704 [details] [diff] [review] patch - Call nsWindow::ForcePresent during going active Review of attachment 8742704 [details] [diff] [review]: ----------------------------------------------------------------- Throwing this at Bas as he ForcesPresent more than I do :)
Attachment #8742704 - Flags: review?(jmuizelaar) → review?(bas)
Comment on attachment 8742704 [details] [diff] [review] patch - Call nsWindow::ForcePresent during going active Review of attachment 8742704 [details] [diff] [review]: ----------------------------------------------------------------- I can't think of any issues with this. Let's try it.
Attachment #8742704 - Flags: review?(bas) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Flags: qe-verify+
Confirming that this issue no longer reproduces on Windows 8.1 x64 using Fx 49.0b7, build ID: 20160825132718.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: