Bug 1237617 - Call nsWindow::ForcePresent during going active r=bas.schouten